include/trax.h

/**
 * A trax image data structure. Use trax_image_* functions to access the data.
**/
typedef struct trax_image {
    short type;
    int width;
    int height;
    int format;
    char* data;
} trax_image;
/**
 * A placeholder for region structure. Use the trax_region_* functions to manipulate
 * the data.
**/
typedef void trax_region;
/**
 * A placeholder for properties structure. Use the trax_properties_* functions to manipulate
 * the data.
**/
typedef struct trax_properties trax_properties;
/**
 * A placeholder for object list structure. Use the trax_object_list_* functions to manipulate
 * the data.
**/
typedef struct trax_object_list {
    int size;
    trax_region** regions;
    trax_properties** properties; 
} trax_object_list;
typedef struct trax_bounds {

    float top;
    float bottom;
    float left;
    float right;

} trax_bounds;
typedef void(*trax_logger)(const char *string, int length, void *obj);
typedef void(*trax_enumerator)(const char *key, const char *value, const void *obj);
/**
 * Some basic configuration data used to set up the server.
**/
typedef struct trax_logging {
    int flags;
    trax_logger callback;
    void* data;
} trax_logging;
/**
 * Metadata used to specify tracker metadata and taxonomy.
**/
typedef struct trax_metadata {
    int format_region;
    int format_image;
    int channels; // Encodes the number of channels (RGB, RGB+D, RGB+IR)
    int flags;
    char* tracker_name;
    char* tracker_description;
    char* tracker_family;
    trax_properties* custom;
} trax_metadata;
typedef trax_metadata trax_configuration;
/**
 * Core object of the protocol. Do not manipulate fields directly.
**/
typedef struct trax_handle {
    int flags;
    int version;
    void* stream;
    trax_logging logging;
    trax_metadata* metadata;
    char* error;
    int objects;
} trax_handle;
/**
 * Array for keeping images (RGB, Depth, IR)
**/
typedef struct trax_image_list {
    trax_image* images[TRAX_CHANNELS];
} trax_image_list;
__TRAX_EXPORT extern const trax_logging trax_no_log;
__TRAX_EXPORT extern const trax_bounds trax_no_bounds;
/**
 * Returns library version.
**/
__TRAX_EXPORT const char* trax_version();
/**
 * Create a tracker metadata structure. The last argument contains metadata flags that influence communication modes.
**/
__TRAX_EXPORT trax_metadata* trax_metadata_create(int region_formats, int image_formats, int channels,
    const char* tracker_name, const char* tracker_description, const char* tracker_family, int flags);
/**
 * Correctly releases a metadata structure.
**/
__TRAX_EXPORT void trax_metadata_release(trax_metadata** metadata);
/**
 * A handy function to initialize a logging configuration structure.
**/
__TRAX_EXPORT trax_logging trax_logger_setup(trax_logger callback, void* data, int flags);
/**
 * Setups the protocol state object for the client and returns a handle object.
**/
__TRAX_EXPORT trax_handle* trax_client_setup_file(int input, int output, const trax_logging log);
/**
 * Setups the protocol state object for the client and returns a handle object.
**/
__TRAX_EXPORT trax_handle* trax_client_setup_socket(int server, int timeout, const trax_logging log);
/**
 * Waits for a valid protocol message from the server.
**/
__TRAX_EXPORT int trax_client_wait(trax_handle* client, trax_object_list** objects, trax_properties* properties);
/**
 * Sends an initialize message, tracking state should be reset.
**/
__TRAX_EXPORT int trax_client_initialize(trax_handle* client, trax_image_list* image, trax_object_list* objects, trax_properties* properties);