support/python/trax/_ctypes.py


                    match = self._include.match(dirname)
                    if not match:
                        dirs.add(dirname)
                    else:
                        for dir2 in glob.glob(match.group("pattern")):
                            self._get_ld_so_conf_dirs(dir2, dirs)
        except IOError:
            pass

    def _create_ld_so_cache(self):
        # Recreate search path followed by ld.so.  This is going to be
        # slow to build, and incorrect (ld.so uses ld.so.cache, which may
        # not be up-to-date).  Used only as fallback for distros without
        # /sbin/ldconfig.
        #
        # We assume the DT_RPATH and DT_RUNPATH binary sections are omitted.

        directories = self._Directories()
        for name in (
            "LD_LIBRARY_PATH",
            "SHLIB_PATH",  # HP-UX
            "LIBPATH",  # OS/2, AIX
            "LIBRARY_PATH",  # BE/OS
        ):
            if name in os.environ:
                directories.extend(os.environ[name].split(os.pathsep))

        self._get_ld_so_conf_dirs("/etc/ld.so.conf", directories)

        bitage = platform.architecture()[0]

        unix_lib_dirs_list = []
        if bitage.startswith("64"):
            # prefer 64 bit if that is our arch
            unix_lib_dirs_list += ["/lib64", "/usr/lib64"]

        # must include standard libs, since those paths are also used by 64 bit
        # installs
        unix_lib_dirs_list += ["/lib", "/usr/lib"]
        if sys.platform.startswith("linux"):
            # Try and support multiarch work in Ubuntu
            # https://wiki.ubuntu.com/MultiarchSpec
            if bitage.startswith("32"):
                # Assume Intel/AMD x86 compat
                unix_lib_dirs_list += ["/lib/i386-linux-gnu", "/usr/lib/i386-linux-gnu"]
            elif bitage.startswith("64"):
                # Assume Intel/AMD x86 compatible
                unix_lib_dirs_list += [
                    "/lib/x86_64-linux-gnu",
                    "/usr/lib/x86_64-linux-gnu",
                ]
            else:
                # guess...
                unix_lib_dirs_list += glob.glob("/lib/*linux-gnu")
        directories.extend(unix_lib_dirs_list)

        cache = {}
        lib_re = re.compile(r"lib(.*)\.s[ol]")
        # ext_re = re.compile(r"\.s[ol]$")
        for our_dir in directories.ordered():
            try:
                for path in glob.glob("%s/*.s[ol]*" % our_dir):
                    file = os.path.basename(path)

                    # Index by filename
                    cache_i = cache.setdefault(file, set())
                    cache_i.add(path)

                    # Index by library name
                    match = lib_re.match(file)
                    if match:
                        library = match.group(1)
                        cache_i = cache.setdefault(library, set())
                        cache_i.add(path)
            except OSError:
                pass

        self._ld_so_cache = cache

    def getplatformpaths(self, libname):
        if self._ld_so_cache is None:
            self._create_ld_so_cache()

        result = self._ld_so_cache.get(libname, set())
        for i in result:
            # we iterate through all found paths for library, since we may have
            # actually found multiple architectures or other library types that
            # may not load
            yield i


# Windows


class WindowsLibraryLoader(LibraryLoader):
    """Library loader for Microsoft Windows"""

    name_formats = ["%s.dll", "%sd.dll", "lib%s.dll", "%slib.dll", "%s"]

    class Lookup(LibraryLoader.Lookup):
        """Lookup class for Windows libraries..."""

        def __init__(self, path):
            super(WindowsLibraryLoader.Lookup, self).__init__(path)
            self.access["stdcall"] = ctypes.windll.LoadLibrary(path)


# Platform switching

# If your value of sys.platform does not appear in this dict, please contact
# the Ctypesgen maintainers.

loaderclass = {
    "darwin": DarwinLibraryLoader,
    "cygwin": WindowsLibraryLoader,
    "win32": WindowsLibraryLoader,
    "msys": WindowsLibraryLoader,
}

load_library = loaderclass.get(sys.platform, PosixLibraryLoader)()


def add_library_search_dirs(other_dirs):
    """
    Add libraries to search paths.
    If library paths are relative, convert them to absolute with respect to this
    file's directory
    """
    for path in other_dirs:
        if not os.path.isabs(path):
            path = os.path.abspath(path)
        load_library.other_dirs.append(path)

del loaderclass

# End loader

add_library_search_dirs([os.path.dirname(__file__)])

# Begin libraries
_libs["trax"] = load_library("trax")

# 1 libraries
# End libraries

# No modules

__off_t = c_long# /usr/include/x86_64-linux-gnu/bits/types.h: 152

__off64_t = c_long# /usr/include/x86_64-linux-gnu/bits/types.h: 153

# /usr/include/x86_64-linux-gnu/bits/types/struct_FILE.h: 36
class struct__IO_marker(Structure):
    pass

# /usr/include/x86_64-linux-gnu/bits/types/struct_FILE.h: 37
class struct__IO_codecvt(Structure):
    pass

# /usr/include/x86_64-linux-gnu/bits/types/struct_FILE.h: 38
class struct__IO_wide_data(Structure):
    pass

_IO_lock_t = None# /usr/include/x86_64-linux-gnu/bits/types/struct_FILE.h: 43

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 137
class struct_trax_image(Structure):
    pass

struct_trax_image.__slots__ = [
    'type',
    'width',
    'height',
    'format',
    'data',
]
struct_trax_image._fields_ = [
    ('type', c_short),
    ('width', c_int),
    ('height', c_int),
    ('format', c_int),
    ('data', POINTER(ctypes.c_char)),
]

trax_image = struct_trax_image# /home/lukacu/Checkouts/vot/trax/include/trax.h: 137

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 149
class struct_trax_properties(Structure):
    pass

trax_properties = struct_trax_properties# /home/lukacu/Checkouts/vot/trax/include/trax.h: 149

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 159
class struct_trax_object_list(Structure):
    pass

struct_trax_object_list.__slots__ = [
    'size',
    'regions',
    'properties',
]
struct_trax_object_list._fields_ = [
    ('size', c_int),
    ('regions', POINTER(ctypes.c_void_p)),
    ('properties', POINTER(POINTER(trax_properties))),
]

trax_object_list = struct_trax_object_list# /home/lukacu/Checkouts/vot/trax/include/trax.h: 159

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 168
class struct_trax_bounds(Structure):
    pass

struct_trax_bounds.__slots__ = [
    'top',
    'bottom',
    'left',
    'right',
]
struct_trax_bounds._fields_ = [
    ('top', c_float),
    ('bottom', c_float),
    ('left', c_float),
    ('right', c_float),
]

trax_bounds = struct_trax_bounds# /home/lukacu/Checkouts/vot/trax/include/trax.h: 168

trax_logger = ctypes.CFUNCTYPE(None, ctypes.c_char_p, ctypes.c_int32, ctypes.c_void_p)
trax_enumerator = ctypes.CFUNCTYPE(None, ctypes.c_char_p, ctypes.c_char_p, ctypes.c_void_p)

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 181
class struct_trax_logging(Structure):
    pass

struct_trax_logging.__slots__ = [
    'flags',
    'callback',
    'data',
]
struct_trax_logging._fields_ = [
    ('flags', c_int),
    ('callback', trax_logger),
    ('data', POINTER(None)),
]

trax_logging = struct_trax_logging# /home/lukacu/Checkouts/vot/trax/include/trax.h: 181

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 195
class struct_trax_metadata(Structure):
    pass

struct_trax_metadata.__slots__ = [
    'format_region',
    'format_image',
    'channels',
    'flags',
    'tracker_name',
    'tracker_description',
    'tracker_family',
    'custom',
]
struct_trax_metadata._fields_ = [
    ('format_region', c_int),
    ('format_image', c_int),
    ('channels', c_int),
    ('flags', c_int),
    ('tracker_name', ctypes.c_char_p),
    ('tracker_description', ctypes.c_char_p),
    ('tracker_family', ctypes.c_char_p),
    ('custom', POINTER(trax_properties)),
]

trax_metadata = struct_trax_metadata# /home/lukacu/Checkouts/vot/trax/include/trax.h: 195

trax_configuration = trax_metadata# /home/lukacu/Checkouts/vot/trax/include/trax.h: 197

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 210
class struct_trax_handle(Structure):
    pass

struct_trax_handle.__slots__ = [
    'flags',
    'version',
    'stream',
    'logging',
    'metadata',
    'error',
    'objects',
]
struct_trax_handle._fields_ = [
    ('flags', c_int),
    ('version', c_int),
    ('stream', POINTER(None)),
    ('logging', trax_logging),
    ('metadata', POINTER(trax_metadata)),
    ('error', ctypes.c_char_p),
    ('objects', c_int),
]

trax_handle = struct_trax_handle# /home/lukacu/Checkouts/vot/trax/include/trax.h: 210

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 217
class struct_trax_image_list(Structure):
    pass

struct_trax_image_list.__slots__ = [
    'images',
]
struct_trax_image_list._fields_ = [
    ('images', POINTER(trax_image) * int(3)),
]

trax_image_list = struct_trax_image_list# /home/lukacu/Checkouts/vot/trax/include/trax.h: 217

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 219
try:
    trax_no_log = (trax_logging).in_dll(_libs["trax"], "trax_no_log")
except:
    pass

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 221
try:
    trax_no_bounds = (trax_bounds).in_dll(_libs["trax"], "trax_no_bounds")
except:
    pass

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 226
if _libs["trax"].has("trax_version", "cdecl"):
    trax_version = _libs["trax"].get("trax_version", "cdecl")
    trax_version.argtypes = []
    trax_version.restype = ctypes.c_char_p

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 231
if _libs["trax"].has("trax_metadata_create", "cdecl"):
    trax_metadata_create = _libs["trax"].get("trax_metadata_create", "cdecl")
    trax_metadata_create.argtypes = [c_int, c_int, c_int, ctypes.c_char_p, ctypes.c_char_p, ctypes.c_char_p, c_int]
    trax_metadata_create.restype = POINTER(trax_metadata)

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 237
if _libs["trax"].has("trax_metadata_release", "cdecl"):
    trax_metadata_release = _libs["trax"].get("trax_metadata_release", "cdecl")
    trax_metadata_release.argtypes = [POINTER(POINTER(trax_metadata))]
    trax_metadata_release.restype = None

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 242
if _libs["trax"].has("trax_logger_setup", "cdecl"):
    trax_logger_setup = _libs["trax"].get("trax_logger_setup", "cdecl")
    trax_logger_setup.argtypes = [trax_logger, ctypes.c_void_p, c_int]
    trax_logger_setup.restype = trax_logging


# /home/lukacu/Checkouts/vot/trax/include/trax.h: 252
if _libs["trax"].has("trax_client_setup_file", "cdecl"):
    trax_client_setup_file = _libs["trax"].get("trax_client_setup_file", "cdecl")
    trax_client_setup_file.argtypes = [c_int, c_int, trax_logging]
    trax_client_setup_file.restype = POINTER(trax_handle)

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 257
if _libs["trax"].has("trax_client_setup_socket", "cdecl"):
    trax_client_setup_socket = _libs["trax"].get("trax_client_setup_socket", "cdecl")
    trax_client_setup_socket.argtypes = [c_int, c_int, trax_logging]
    trax_client_setup_socket.restype = POINTER(trax_handle)

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 262
if _libs["trax"].has("trax_client_wait", "cdecl"):
    trax_client_wait = _libs["trax"].get("trax_client_wait", "cdecl")
    trax_client_wait.argtypes = [POINTER(trax_handle), POINTER(POINTER(trax_object_list)), POINTER(trax_properties)]
    trax_client_wait.restype = c_int

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 267
if _libs["trax"].has("trax_client_initialize", "cdecl"):
    trax_client_initialize = _libs["trax"].get("trax_client_initialize", "cdecl")
    trax_client_initialize.argtypes = [POINTER(trax_handle), POINTER(trax_image_list), POINTER(trax_object_list), POINTER(trax_properties)]
    trax_client_initialize.restype = c_int
